--- a/giveaway/package.json
+++ b/giveaway/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^8.3.2",
@@ -14,12 +15,14 @@
     "mongoose": "^5.12.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-react-session": "^2.6.1",
     "redux-thunk": "^2.3.0",
